@@ -388,6 +388,8 @@ module Options = Main_args.Make_bytetop_options (struct
   let _warn_help = Warnings.help_warnings
   let _dparsetree = set dump_parsetree
   let _dtypedtree = set dump_typedtree
+  let _dno_unique_ids = clear unique_ids
+  let _dunique_ids = set unique_ids
   let _dsource = set dump_source
   let _drawlambda = set dump_rawlambda
   let _dlambda = set dump_lambda
