@@ -118,6 +118,8 @@ module Options = Main_args.Make_bytecomp_options (struct
   let _color s = option_with_arg "-color" s
   let _where = option "-where"
   let _nopervasives = option "-nopervasives"
+  let _dno_unique_ids = option "-dno-unique-ids"
+  let _dunique_ids = option "-dunique-ids"
   let _dsource = option "-dsource"
   let _dparsetree = option "-dparsetree"
   let _dtypedtree = option "-dtypedtree"
