@@ -119,6 +119,7 @@ val for_package : string option ref
 val error_size : int ref
 val float_const_prop : bool ref
 val transparent_modules : bool ref
+val unique_ids : bool ref
 val dump_source : bool ref
 val dump_parsetree : bool ref
 val dump_typedtree : bool ref
